--- a/templates/base.html
+++ b/templates/base.html
@@ -71,11 +71,11 @@
 
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Travoyage <em>.</em></a></div>
+					<div id="gtco-logo"><a href="/index.html">Travoyage <em>.</em></a></div>
 				</div>
 				<div class="col-xs-8 text-right menu-1">
 					<ul>
-						<li><a href="destination.html">Destination</a></li>
+						<li><a href="/destination.html">Destination</a></li>
 						<li class="has-dropdown">
 							<a href="#">Travel</a>
 							<ul class="dropdown">
@@ -85,8 +85,8 @@
 								<li><a href="#">Canada</a></li>
 							</ul>
 						</li>
-						<li><a href="pricing.html">Pricing</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="/pricing.html">Pricing</a></li>
+						<li><a href="/contact.html">Contact</a></li>
 						{% if request.user.is_authenticated %}
 						<li><a href="{%url 'account_logout'%}">Logout</a></li>
 						{% else %}
