--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -35,16 +35,6 @@
 				</div>
 			<div class="row">
 
-				<div class="col-lg-12 col-md-4 col-sm-6">
-					<a class="fh5co-card-item ">
-						<div class="fh5co-text">
-							<h2 align="left">Flight name/number, Airlines</h2>
-							<p align="left">From:   To:   </p>
-                            <p align="left">Time and Date</p>
-							<p align="right"><span class="btn btn-primary">Schedule a Trip</span></p>
-						</div>
-					</a>
-				</div>
 				{% for flight in object_list %}
 					<div class="col-lg-12 col-md-4 col-sm-6">
 					<a class="fh5co-card-item ">
@@ -52,7 +42,7 @@
 							<h2 align="left">{{flight.flight_no}}, {{flight.airline}}</h2>
 							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
                             <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
-							<p align="right"><span class="btn btn-primary">Schedule a Trip</span></p>
+							<p align="right"><a class="btn btn-primary" href="{{flight.get_abs_url}}">Book</a></p>
 						</div>
 					</a>
 				</div>
