--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,7 @@
 							</li>
 							<li><a href="pricing.html">Pricing</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="flights_results.html">Temp Flights Page</a></li>
 							{% if request.user.is_authenticated %}
 							<li><a href="{%url 'account_logout'%}">Logout</a></li>
 							{% else %}
