--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,8 @@
 
 	<!-- Modernizr JS -->
 	<script src="{% static 'js/modernizr-2.6.2.min.js ' %}"></script>
+
+	<link rel="stylesheet" href="{% static 'css/style_from_ecomm.css' %}">
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="{% static 'js/respond.min.js' %}"></script>
