--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,6 +114,14 @@ h1, h2, h3, h4, h5, h6, figure {
   text-transform: uppercase;
   font-weight: bold;
 }
+
+.gtco-nav #trav-logo {
+  font-size: 50%;
+  margin: 0;
+  padding: 0;
+
+}
+
 .gtco-nav #gtco-logo em {
   color: #09C6AB;
 }
