--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
 
 				<div class="row">
 					<div class="col-sm-4 col-xs-12">
-						<div id="gtco-logo"><a href="index.html">Travoyage <em>.</em></a></div>
+						<div id="trav-logo"><a href="index.html"><img src="{% static 'images/rsz_travoyage.png' %}"></a></div>
 					</div>
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
