--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,14 +10,32 @@
 
 {% block content %}
 
-<header class="header">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
+		<div class="overlay"></div>
+		<div class="gtco-container">
+			<div class="row">
+				<div class="col-md-12 col-md-offset-0 text-center">
+					<div class="row row-mt-15em">
+
+						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
+							<h1 class="sign-in">{% trans "Sign In" %}</h1>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</header>
+
+<body class="header">
   <div class="container">
     <div class="row">
       <div class="col-12">
         <br>
         <br>
 
-        <h1 class="sign-in">{% trans "Sign In" %}</h1>
+        <br>
 
         <h3>Please login with a <a href="{% provider_login_url "google" %}">Google Account</a> or <a href="{{ signup_url }}">Sign up</a>
           for a Travoyage account and sign in below:</h3>
@@ -41,7 +59,7 @@
     </div>
   </div>
 
-</header>
+</body>
 
 
 
