--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
 	{% block content %}
 
 	
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(images/img_bg_3.jpg)">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg)">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
