--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -43,6 +43,7 @@
 							<p align="left">{{flight.date}}</p>
 							<p align="left">Departure: {{flight.start}}, {{flight.start_time}}  </p>
                             <p align="left"> To: {{flight.destination}}, {{flight.arrival_time}}</p>
+							<p align="left">Flying Time: {{flight.duration_hr}} hours {{flight.duration_min}} minutes</p>
 							<p align="right"><a class="btn btn-primary" href="{{flight.get_abs_url}}">Book</a></p>
 						</div>
 					</a>
