--- a/templates/destination.html
+++ b/templates/destination.html
@@ -39,89 +39,25 @@
 			</div>
 			<div class="row">
 
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/rsz_new_york.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/rsz_new_york.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>New York, USA</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/seoul.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/seoul.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Seoul, South Korea</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/paris.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/paris.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Paris, France</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
 
+				{% for item in object_list %}
+                        <div class="col-lg-4 col-md-4 col-sm-6">
+							<a href="/media/{{ item.image }}" class="fh5co-card-item image-popup">
+								<figure>
+									<div class="overlay"><i class="ti-plus"></i></div>
+									<img src="/media/{{ item.image }}" alt="Image" class="img-responsive">
+							</figure></a>
+                            <div class="product__item__pic set-bg" data-setbg="/media/{{ item.image }}">
+                            </div>
+                            <div class="product__item__text">
 
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/sydney.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/sydney.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Sydney, Australia</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
+                            </div>
+							<div class="fh5co-text">
+								<center><h3>{{item.name}}</h3></center>
 						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/greece.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/greece.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Greece, Europe</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="{% static 'images/spain.jpg' %}" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="{% static 'images/spain.jpg' %}" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Spain, Europe</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="btn btn-primary">More</span></p>
-						</div>
-					</a>
-				</div>
-
+							<center> <a href="{{item.get_abs_url}}"><span class="btn btn-primary">More</span></a></center>
+                        </div>
+                        {% endfor %}
 			</div>
 		</div>
 	</div>
