--- a/templates/flights_results.html
+++ b/templates/flights_results.html
@@ -10,7 +10,7 @@
 	<div id="page">
 
 
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(images/img_6.jpg)">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(/static/images/home_flight.jpg	)">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
@@ -30,10 +30,9 @@
 
 	<div class="gtco-section">
 		<div class="gtco-container">
-            <div class="gtco-heading">
-					<h3>Search Results: </h3>
-				</div>
+
 			<div class="row">
+
 				{% if object_list %}
 				{% for flight in object_list %}
 					<div class="col-lg-12 col-md-4 col-sm-6">
